crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_stmt_loop_do.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "DoWhile": {
          "body": {
            "kind": {
              "Block": []
            },
            "span": {
              "start": 10,
              "end": 14
            }
          },
          "condition": {
            "kind": {
              "Variable": "a"
            },
            "span": {
              "start": 22,
              "end": 24
            }
          }
        }
      },
      "span": {
        "start": 7,
        "end": 26
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 26
  }
}
