crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_stmt_multicatch.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "TryCatch": {
          "body": [
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "Variable": "x"
                  },
                  "span": {
                    "start": 16,
                    "end": 18
                  }
                }
              },
              "span": {
                "start": 16,
                "end": 20
              }
            }
          ],
          "catches": [
            {
              "types": [
                {
                  "parts": [
                    "X"
                  ],
                  "kind": "Unqualified",
                  "span": {
                    "start": 29,
                    "end": 30
                  }
                },
                {
                  "parts": [
                    "Y"
                  ],
                  "kind": "Unqualified",
                  "span": {
                    "start": 31,
                    "end": 33
                  }
                }
              ],
              "var": "e1",
              "body": [
                {
                  "kind": {
                    "Expression": {
                      "kind": {
                        "Variable": "y"
                      },
                      "span": {
                        "start": 44,
                        "end": 46
                      }
                    }
                  },
                  "span": {
                    "start": 44,
                    "end": 48
                  }
                }
              ],
              "span": {
                "start": 28,
                "end": 50
              }
            },
            {
              "types": [
                {
                  "parts": [
                    "A"
                  ],
                  "kind": "FullyQualified",
                  "span": {
                    "start": 57,
                    "end": 59
                  }
                },
                {
                  "parts": [
                    "B",
                    "C"
                  ],
                  "kind": "Qualified",
                  "span": {
                    "start": 60,
                    "end": 64
                  }
                }
              ],
              "var": "e2",
              "body": [
                {
                  "kind": {
                    "Expression": {
                      "kind": {
                        "Variable": "z"
                      },
                      "span": {
                        "start": 75,
                        "end": 77
                      }
                    }
                  },
                  "span": {
                    "start": 75,
                    "end": 79
                  }
                }
              ],
              "span": {
                "start": 56,
                "end": 80
              }
            }
          ],
          "finally": null
        }
      },
      "span": {
        "start": 6,
        "end": 80
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 80
  }
}
